# binscatter

./: README.md  pyproject.toml
src/binscatter/: __init__.py  binscatter.py
tests/: test_all.py
