[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binscatter"
dynamic = ["version"]
description = "Prepare bivariate data for binned scatter plotting. Optionally condition on a set of controls."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["binscatter", "plotting", "regression"]
authors = [
  { name = "Sam Boysel", email = "sboysel@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy"
]

[project.urls]
Documentation = "https://github.com/sboysel/binscatter#readme"
Issues = "https://github.com/sboysel/binscatter/issues"
Source = "https://github.com/sboysel/binscatter"

[tool.hatch.version]
path = "src/binscatter/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/binscatter tests}"

[tool.coverage.run]
source_pkgs = ["binscatter", "tests"]
branch = true
parallel = true
omit = [
  "src/binscatter/__about__.py",
]

[tool.coverage.paths]
binscatter = ["src/binscatter", "*/binscatter/src/binscatter"]
tests = ["tests", "*/binscatter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
